tests/baselines/reference/for-of51.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of51.ts(1,10): error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
tests/cases/conformance/es6/for-ofStatements/for-of51.ts(1,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of51.ts (2 errors) ====
    for (let let of []) {}
             ~~~
!!! error TS2480: 'let' is not allowed to be used as a name in 'let' or 'const' declarations.
                    ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.